--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
         updated with the latest trends. Adaptable and dedicated to delivering
         high-quality solutions using emerging technologies.
       </p>
+      <div>
+        <a href="https://fagung-dev.github.io/porto-web.github.io/">Live view!</a>
+      </div>
     </div>
   </body>
 </html>
